# lnkpi

./: .dockerignore  .env.example  .gitignore  README.md  package.json  pnpm-lock.yaml
deploy/: .env.production.example  AGENT_RUNTIME_PRODUCTION.md  bootstrap-server.sh  cvm-recover.sh  deploy-remote-build.sh  deploy-remote.sh  docker-compose.prod.images.yml  (+5 more)
services/agent-runtime/: .env.example  README.md  pyproject.toml
services/agent-runtime/app/: config.py  main.py  runs.py
services/agent-runtime/app/graph/: __init__.py  builder.py  state.py  topo.py
services/agent-runtime/app/graph/nodes/: __init__.py  await_confirm.py  done.py  intake.py  orchestrate_gen.py  plan.py  split.py
services/agent-runtime/app/skills/: loader.py  models.py
services/agent-runtime/app/tools/: __init__.py  definitions.py  nest_client.py
services/agent-runtime/scripts/: e2e_marketing_smoke.py
services/agent-runtime/skills/enterprise-marketing-campaign/: SKILL.md
services/agent-runtime/skills/enterprise-marketing-campaign/assets/: canvas-manifest.yaml
services/agent-runtime/skills/enterprise-marketing-campaign/assets/examples/: sanitary-ware.md
services/agent-runtime/tests/: test_await_confirm.py  test_builtin_skill.py  test_graph_plan_split.py  test_health.py  test_nest_client.py  test_orchestrate_gen.py  test_runs_stream.py  test_skills_loader.py  test_topo.py
services/agent-runtime/tests/fixtures/bad-frontmatter/: SKILL.md
services/agent-runtime/tests/fixtures/valid-skill/: SKILL.md
services/agent-runtime/tests/fixtures/valid-skill/assets/: canvas-manifest.yaml
(+331 files in other folders)
