[project]
name = "lnkpi-agent-runtime"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "langgraph>=0.2",
  "langchain-openai>=0.2",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
